<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Error loading data</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="ad_description">ad</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Loginning">LOGIN</string>
    <string name="Enter">Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="notAuth">Not authtorized</string>
    <string name="attachmentImagePost">Attachment image in Post</string>
    <string name="my_job">My Job</string>
    <string name="company">Company</string>
    <string name="description_job_menu">Popup job menu</string>
    <string name="job_company">Company name:</string>
    <string name="job_position">Position:</string>
    <string name="job_start">Start:</string>
    <string name="job_finish">Finish:</string>
    <string name="job_link">Link:</string>
    <string name="empty_jobs">There are no jobss.\\nIf you create a new job, it will appear here</string>
    <string name="add_job">Add job</string>
    <string name="create_job_header">Create new job</string>
    <string name="edit_job">Edit job</string>
    <string name="description_image_open">Open Image</string>
    <string name="description_audio_play">Play audio</string>
    <string name="description_audio_pause">Pause Audio</string>
    <string name="error_play">Error play\n</string>
    <string name="description_take_audio">Pick audio</string>
    <string name="description_take_video" >Pick video</string>
    <string name="description_media">Media\n</string>
    <string name="description_video">Play video</string>
    <string name="dateTimeEvent">"Event datetime: "</string>
    <string name="description_event_speakers">Speakers</string>
    <string name="description_event_location">Location\n</string>
    <string name="add_event">Add event\n</string>
    <string name="description_pick_location">Pick location</string>
    <string name="event_date">Event date:</string>
    <string name="event_time">Event time:</string>
    <string name="chooser_share_event">Share event</string>
    <string name="my_event">My event</string>
    <string name="coords_latitude">Coordinates latitude:</string>
    <string name="coords_longitude">Coordinates longitude:</string>
    <string name="coordinatesEvent">Coordinates event</string>
    <string name="coordinatesOfEvent">Event Coordinates:</string>
    <string name="add_location">Add location</string>
    <string name="need_permission">Need permission</string>
    <string name="title_map">Title map\n</string>
    <string name="delete_location">Delete location</string>
    <string name="find_location">Find location\n</string>
    <string name="user_avatar">User avatar\n</string>
    <string name="all_users">All users\n</string>
</resources>