<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_new_job"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_spacing">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_card_job"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_job_menu"
            app:icon="@drawable/ic_more_vert_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/job_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginTop="@dimen/common_spacing"
            android:text="@string/job_company"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/job_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintBaseline_toBaselineOf="@+id/job_company_label"
            app:layout_constraintStart_toEndOf="@+id/job_company_label"
            tools:text="Company" />

        <TextView
            android:id="@+id/job_position_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_position"
            app:layout_constraintStart_toStartOf="@+id/job_company_label"
            app:layout_constraintTop_toBottomOf="@+id/job_company_label" />

        <TextView
            android:id="@+id/job_position_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintBaseline_toBaselineOf="@+id/job_position_label"
            app:layout_constraintStart_toEndOf="@+id/job_position_label"
            tools:text="Position" />

        <TextView
            android:id="@+id/job_start_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_start"
            app:layout_constraintStart_toStartOf="@+id/job_position_label"
            app:layout_constraintTop_toBottomOf="@+id/job_position_label" />

        <TextView
            android:id="@+id/job_start_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintBaseline_toBaselineOf="@+id/job_start_label"
            app:layout_constraintStart_toEndOf="@+id/job_position_label"
            tools:text="Start from" />

        <TextView
            android:id="@+id/job_finish_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_finish"
            app:layout_constraintStart_toStartOf="@+id/job_start_label"
            app:layout_constraintTop_toBottomOf="@+id/job_start_label" />

        <TextView
            android:id="@+id/job_finish_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintBaseline_toBaselineOf="@+id/job_finish_label"
            app:layout_constraintStart_toEndOf="@+id/job_start_label"
            tools:text="Finish" />

        <TextView
            android:id="@+id/job_link_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_link"
            app:layout_constraintStart_toStartOf="@+id/job_finish_label"
            app:layout_constraintTop_toBottomOf="@+id/job_finish_label" />

        <TextView
            android:id="@+id/job_link_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            app:layout_constraintBaseline_toBaselineOf="@+id/job_link_label"
            app:layout_constraintStart_toEndOf="@+id/job_finish_label"
            tools:text="Website" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/job_bottom_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="job_link_label, job_link_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
